# ai-inspection

./: .gitignore  main.py  pyproject.toml  sanity_step1.py
src/: calculate_pixels.py  detect_boxes.py  inspection_pipeline.py  pixels_to_mm.py  segment.py
