[project]
name = "ai-inspection"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.12.0",
    "boto3>=1.42.54",
    "boto3-stubs~=1.42.54",
    "fastapi>=0.129.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy==2.2.3",
    "opencv-python==4.13.0.92",
    "pandas>=2.3.3",
    "pillow==12.1.1",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "safetensors==0.7.0",
    "torch==2.9.1",
    "torchaudio==2.9.1",
    "torchvision==0.24.1",
    "transformers==5.2.0",
    "uvicorn>=0.41.0",
]
